shift fix

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -196,7 +196,9 @@ button {
             overflow: hidden;
 
         & img {
-            // transform: scale(1.3) translateX(0%) translateY(7%);
+            aspect-ratio: 0.749;
+            width: 100%;
+            height: 100%; 
         }
 
         @include sm {
@@ -212,7 +214,9 @@ button {
         overflow: hidden;
 
         & img {
-            // transform: scale(1.4) translateX(4%) translateY(7%);
+            aspect-ratio: 0.749;
+            width: 100%;
+            height: 100%; 
         }
 
         @include sm {
@@ -227,7 +231,9 @@ button {
         overflow: hidden;
 
         & img {
-            // transform: scale(1) translateY(0%) translateX(0%);
+            aspect-ratio: 0.749;
+            width: 100%;
+            height: 100%; 
         }
 
         @include sm {
@@ -247,7 +253,9 @@ button {
             overflow: hidden;
 
             & img {
-                // transform: scale(1.2) translateY(4%) translateX(0%);
+                aspect-ratio: 1.576;
+                width: 100%;
+                height: 100%;
             }
 
             @include sm {
@@ -262,6 +270,12 @@ button {
             grid-row: 3 / span 1;
             overflow: hidden;
 
+            & img {
+                aspect-ratio: 1.333;
+                width: 100%;
+                height: 100%;
+            }
+
             
         @include sm {
             grid-column: 1 / span 1;
@@ -274,6 +288,7 @@ button {
             grid-column: 3 / span 1;
             grid-row: 3 / span 1;
             overflow: hidden;
+            aspect-ratio: 0.659;
 
             & img {
                 transform: scale(1.3);
@@ -299,6 +314,12 @@ button {
                 grid-column: 1 / span 2;
                 grid-row: 1 / span 1;
             }
+
+            & img {
+                aspect-ratio: 1.333;
+                width: 100%;
+                height: 100%;
+            }
     
         } 
 
@@ -311,18 +332,36 @@ button {
                 grid-column: 1 / span 2;
                 grid-row: 3 / span 1;
             }
+
+            & img {
+                aspect-ratio: 0.75;
+                width: 100%;
+                height: 100%;
+            }
         } 
 
         &> div:nth-child(3) {
             grid-column: 2 / span 1;
             grid-row: 2 / span 1;
             overflow: hidden;
+
+            & img {
+                aspect-ratio: 0.75;
+                width: 100%;
+                height: 100%;
+            }
         } 
 
                 &> div:nth-child(4) {
             grid-column: 3 / span 1;
             grid-row: 2 / span 1;
             overflow: hidden;
+
+            & img {
+                aspect-ratio: 0.75;
+                width: 100%;
+                height: 100%;
+            }
 
 
             @include sm {
