--- a/styles/styles.css
+++ b/styles/styles.css
@@ -470,6 +470,11 @@ button:hover {
   grid-row: 1/span 4;
   overflow: hidden;
 }
+.gallery-studio > div:nth-child(1) img {
+  aspect-ratio: 0.749;
+  width: 100%;
+  height: 100%;
+}
 @media (width <= 45.06125rem) {
   .gallery-studio > div:nth-child(1) {
     grid-column: 1/span 2;
@@ -480,6 +485,11 @@ button:hover {
   grid-column: 3/span 1;
   grid-row: 1/span 2;
   overflow: hidden;
+}
+.gallery-studio > div:nth-child(2) img {
+  aspect-ratio: 0.749;
+  width: 100%;
+  height: 100%;
 }
 @media (width <= 45.06125rem) {
   .gallery-studio > div:nth-child(2) {
@@ -492,6 +502,11 @@ button:hover {
   grid-row: 3/span 2;
   overflow: hidden;
 }
+.gallery-studio > div:nth-child(3) img {
+  aspect-ratio: 0.749;
+  width: 100%;
+  height: 100%;
+}
 @media (width <= 45.06125rem) {
   .gallery-studio > div:nth-child(3) {
     grid-column: 2/span 1;
@@ -502,6 +517,11 @@ button:hover {
   grid-column: 1/span 3;
   grid-row: 1/span 2;
   overflow: hidden;
+}
+.gallery-school > div:nth-child(1) img {
+  aspect-ratio: 1.576;
+  width: 100%;
+  height: 100%;
 }
 @media (width <= 45.06125rem) {
   .gallery-school > div:nth-child(1) {
@@ -514,6 +534,11 @@ button:hover {
   grid-row: 3/span 1;
   overflow: hidden;
 }
+.gallery-school > div:nth-child(2) img {
+  aspect-ratio: 1.333;
+  width: 100%;
+  height: 100%;
+}
 @media (width <= 45.06125rem) {
   .gallery-school > div:nth-child(2) {
     grid-column: 1/span 1;
@@ -524,6 +549,7 @@ button:hover {
   grid-column: 3/span 1;
   grid-row: 3/span 1;
   overflow: hidden;
+  aspect-ratio: 0.659;
 }
 .gallery-school > div:nth-child(3) img {
   transform: scale(1.3);
@@ -545,6 +571,11 @@ button:hover {
     grid-row: 1/span 1;
   }
 }
+.gallery-home > div:nth-child(1) img {
+  aspect-ratio: 1.333;
+  width: 100%;
+  height: 100%;
+}
 .gallery-home > div:nth-child(2) {
   grid-column: 1/span 1;
   grid-row: 2/span 1;
@@ -556,15 +587,30 @@ button:hover {
     grid-row: 3/span 1;
   }
 }
+.gallery-home > div:nth-child(2) img {
+  aspect-ratio: 0.75;
+  width: 100%;
+  height: 100%;
+}
 .gallery-home > div:nth-child(3) {
   grid-column: 2/span 1;
   grid-row: 2/span 1;
   overflow: hidden;
 }
+.gallery-home > div:nth-child(3) img {
+  aspect-ratio: 0.75;
+  width: 100%;
+  height: 100%;
+}
 .gallery-home > div:nth-child(4) {
   grid-column: 3/span 1;
   grid-row: 2/span 1;
   overflow: hidden;
+}
+.gallery-home > div:nth-child(4) img {
+  aspect-ratio: 0.75;
+  width: 100%;
+  height: 100%;
 }
 @media (width <= 45.06125rem) {
   .gallery-home > div:nth-child(4) {
